# bergenbrettspill

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  README.md  bergenbrettspillklubb.db  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yml
backend/: README.md
backend/src/: bgg_game.rs  db.rs  lib.rs
backend/src/meetup/: events.rs  graphql.rs  mod.rs  query.graphql
client/: .env  .eslintrc.json  .stylelintrc.json  Dockerfile  README.md  bergenbrettspillklubb.db  games.html  header.html  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts  webpack.config.js
client/src/: App.tsx  apollo.ts  env.ts  index.js  index.scss  index.tsx  membership.html  where.html
frontend/: Dockerfile  README.md  nginx.conf
frontend/src/: footer.html
server/: .eslintrc.json  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  bergenbrettspillklubb.db  example.settings.json  package.json
server/src/: bgg_game.rs  bgg_game_repository.rs  db.rs  event.rs  index.js  main.rs  meetup.rs
server/src/apis/: boardGameGeek.js  index.js  meetup.js
server/src/dbs/bergenbrettspillklubb/: Boardgames_Gamemechanics.js  Gamemechanics.js  index.js
server/src/expressApp/: index.js
server/src/expressApp/apollo/: index.js  schema.js
server/src/expressApp/templates/frontpage/: description.pug  events.pug  index.pug
server/src/expressApp/templates/layouts/default/: footer.pug  header.pug
server/src/meetup/: schema.json
src/client/: index.html  index.js
src/server/: index.js
(+75 files in other folders)
