[package]
name = "bbk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = { version = "0.4.26", features = ["serde"] }
derive_builder = "0.20.2"
graphql_client = "0.14.0"
quick-xml = "0.37.2"
reqwest = { version = "0.12.12", features = ["json"] }
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
